fix: The splitter overlaps the toolbar

--- a/packages/default-layout/src/styles/defaultLayout.scss
+++ b/packages/default-layout/src/styles/defaultLayout.scss
@@ -40,7 +40,6 @@ $rpv-default-layout-toolbar-height: 2.5rem;
 
 .rpv-default-layout__sidebar {
     display: flex;
-    margin-top: $rpv-default-layout-toolbar-height;
     border-color: hsl(var(--rpv-border));
 
     &--opened {
@@ -70,6 +69,7 @@ $rpv-default-layout-toolbar-height: 2.5rem;
 
 .rpv-default-layout__main {
     display: flex;
+    padding-top: $rpv-default-layout-toolbar-height;
 
     /* Fix the scroll issue on Safari */
     height: 100%;
@@ -85,7 +85,6 @@ $rpv-default-layout-toolbar-height: 2.5rem;
 .rpv-default-layout__body {
     flex: 1;
     overflow: auto;
-    padding-top: $rpv-default-layout-toolbar-height;
 }
 
 @media (min-width: 768px) {
